RESOLVED FIXED223878
Computed style for background-position should not use "left" and "top" keywords
https://bugs.webkit.org/show_bug.cgi?id=223878
Summary Computed style for background-position should not use "left" and "top" keywords
Antoine Quint
Reported 2021-03-29 09:20:38 PDT
Computed style for background-position should not use "left" and "top" keywords
Attachments
Patch (99.02 KB, patch)
2021-03-29 09:21 PDT, Antoine Quint
simon.fraser: review+
ews-feeder: commit-queue-
Patch (149.80 KB, patch)
2021-03-30 09:01 PDT, Antoine Quint
no flags
Patch (151.46 KB, patch)
2021-03-30 10:57 PDT, Antoine Quint
no flags
Patch (151.09 KB, patch)
2021-03-30 11:19 PDT, Antoine Quint
no flags
Antoine Quint
Comment 1 2021-03-29 09:21:17 PDT
Antoine Quint
Comment 2 2021-03-29 11:05:01 PDT
Filed a WPT PR to address the regressing WPT test at https://github.com/web-platform-tests/wpt/pull/28284.
Antoine Quint
Comment 3 2021-03-30 09:01:39 PDT
EWS Watchlist
Comment 4 2021-03-30 09:02:23 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
Antoine Quint
Comment 5 2021-03-30 10:57:07 PDT
Antoine Quint
Comment 6 2021-03-30 11:19:04 PDT
EWS
Comment 7 2021-03-30 22:49:00 PDT
Committed r275269: <https://commits.webkit.org/r275269> All reviewed patches have been landed. Closing bug and clearing flags on attachment 424662 [details].
Radar WebKit Bug Importer
Comment 8 2021-03-30 22:50:27 PDT
Note You need to log in before you can comment on or make changes to this bug.