Computed style for background-position should not use "left" and "top" keywords https://bugs.webkit.org/show_bug.cgi?id=223878

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

Add 106 new PASS results.

* web-platform-tests/css/css-backgrounds/animations/background-position-interpolation-expected.txt:
* web-platform-tests/css/css-backgrounds/animations/background-position-origin-interpolation-expected.txt:
* web-platform-tests/css/css-backgrounds/parsing/background-position-computed-expected.txt:
* web-platform-tests/css/css-pseudo/first-letter-allowed-properties.html: Update the test per WPT PR #28284.

Source/WebCore:

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::ComputedStyleExtractor::valueForPropertyInStyle): Ensure querying the computed
style for background-position longhands passes in the RenderStyle for the calc() case.
(WebCore::createPositionListForLayer):

LayoutTests:

* fast/backgrounds/background-position-parsing-2-expected.txt: Removed.
* fast/backgrounds/background-position-parsing-2.html: We remove this test because it is incorrect
and superseded by WPT tests that we now pass, checking parsing of both valid and invalid values.
* fast/css/background-position-serialize-expected.txt:
* fast/css/background-position-serialize.html: Update this test to not expect "left" or "top".
* transitions/resources/transition-test-helpers.js: Update the helper to not rely on keywords
to obtain x and y values from the computed style.


git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275269 268f45cc-cd09-0410-ab3c-d52691b4dbfc
Canonical link: https://commits.webkit.org/235954@main